# acbrlib-python

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: unittests.yml
acbrlib_python/: __init__.py  constantes.py  excecoes.py  mixins.py  proto.py
acbrlib_python/cep/: __init__.py  constantes.py  excecoes.py  impl.py  modelos.py
exemplos/: cep.py
tests/: __init__.py  test_acbrlib_python.py  test_proto.py
tests/cep/: __init__.py  test_resposta.py
