[tool.poetry]
name = "acbrlib-python"
version = "0.1.0"
description = "Camada de abstração para acesso à ACBrLib em Python"
authors = ["Daniel Gonçalves <daniel@base4.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
