[tool.poetry]
name = "acbrlib-python"
version = "0.1.0"
description = "Camada de abstração para acesso à ACBrLib em Python"
license = "Apache-2.0"
repository = "https://github.com/base4sistemas/acbrlib-python"
authors = ["Daniel Gonçalves <daniel@base4.com.br>"]
readme = "README.rst"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Topic :: Printing",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "*"
ipython = "^7.28.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/base4sistemas/acbrlib-python/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
